<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout style="@style/CoordinatorDefault"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <com.google.android.material.appbar.AppBarLayout
        style="@style/AppBarCollapsing"
        android:fitsSystemWindows="true">
        <com.google.android.material.appbar.CollapsingToolbarLayout
            style="@style/CollapsingDefault"
            app:contentScrim="@color/black_60"
            app:layout_scrollFlags="scroll|exitUntilCollapsed">
            <ImageView
                android:id="@+id/iv_movie"
                style="@style/ImageViewWrapV"
                android:layout_height="@dimen/dimens_320dp"
                app:layout_collapseMode="parallax"
                android:background="@color/colorPrimaryDark"/>
            <View
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/black_40"/>
            <LinearLayout
                style="@style/LinearVerticalWrap"
                android:layout_gravity="bottom"
                android:layout_marginHorizontal="@dimen/dimens_32dp"
                android:layout_marginBottom="@dimen/dimens_32dp">
                <TextView
                    android:id="@+id/tv_title"
                    style="@style/TextTitleSuperExtraBig"
                    android:text="@string/text_lorem_ipsum"
                    android:textStyle="bold"
                    android:textColor="@color/white"/>
                <RatingBar
                    android:id="@+id/rating"
                    style="@style/RatingBarSmall"
                    android:layout_marginTop="@dimen/dimens_10dp"/>
            </LinearLayout>
            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar_detail"
                android:layout_width="match_parent"
                android:layout_height="?actionBarSize"
                app:layout_collapseMode="pin"/>
        </com.google.android.material.appbar.CollapsingToolbarLayout>
    </com.google.android.material.appbar.AppBarLayout>
    <androidx.core.widget.NestedScrollView
        style="@style/NestedScrollDefault"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">
        <LinearLayout
            style="@style/LinearVerticalWrap"
            android:layout_margin="@dimen/dimens_32dp">
            <LinearLayout
                style="@style/LinearHorizontalWrap"
                android:weightSum="4">
                <LinearLayout
                    style="@style/LinearVerticalWrap"
                    android:layout_width="@dimen/dimens_0dp"
                    android:layout_weight="1">
                    <TextView
                        style="@style/TextTitleNormal"
                        android:text="@string/text_release_date"/>
                    <TextView
                        android:id="@+id/tv_release_date"
                        style="@style/TextTitleBig"
                        android:textStyle="bold"
                        android:layout_marginTop="@dimen/dimens_4dp"/>
                </LinearLayout>
                <LinearLayout
                    style="@style/LinearVerticalDefault"
                    android:layout_width="@dimen/dimens_0dp"
                    android:layout_weight="0.5"
                    android:gravity="center">
                    <View
                        style="@style/LineVertical"/>
                </LinearLayout>
                <LinearLayout
                    style="@style/LinearVerticalWrap"
                    android:layout_width="@dimen/dimens_0dp"
                    android:layout_weight="1">
                    <TextView
                        style="@style/TextTitleNormal"
                        android:text="@string/text_language"/>
                    <TextView
                        android:id="@+id/tv_language"
                        style="@style/TextTitleBig"
                        android:textStyle="bold"
                        android:layout_marginTop="@dimen/dimens_4dp"/>
                </LinearLayout>
                <LinearLayout
                    style="@style/LinearVerticalDefault"
                    android:layout_width="@dimen/dimens_0dp"
                    android:layout_weight="0.5"
                    android:gravity="center">
                    <View
                        style="@style/LineVertical"/>
                </LinearLayout>
                <LinearLayout
                    style="@style/LinearVerticalWrap"
                    android:layout_width="@dimen/dimens_0dp"
                    android:layout_weight="1">
                    <TextView
                        style="@style/TextTitleNormal"
                        android:text="@string/text_popularity"/>
                    <TextView
                        android:id="@+id/tv_popularity"
                        style="@style/TextTitleBig"
                        android:textStyle="bold"
                        android:layout_marginTop="@dimen/dimens_4dp"/>
                </LinearLayout>
            </LinearLayout>
            <View style="@style/LineHorizontal"
                android:layout_marginVertical="@dimen/dimens_32dp"/>
            <LinearLayout
                style="@style/LinearVerticalDefault">
                <TextView
                    style="@style/TextTitleBig"
                    android:textStyle="bold"
                    android:text="@string/text_overview"/>
                <TextView
                    android:id="@+id/tv_overview"
                    style="@style/TextTitleNormal"
                    android:layout_marginTop="@dimen/dimens_16dp"/>
            </LinearLayout>
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>
</androidx.coordinatorlayout.widget.CoordinatorLayout>