<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <ImageView
        android:id="@+id/iv_background"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"/>
    <View
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white_20"/>
    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize"
        app:menu="@menu/menu_setting"/>
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/lay_root"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginVertical="@dimen/dimens_64dp"
        android:layout_marginHorizontal="@dimen/dimens_16dp">
        <ImageView
            android:id="@+id/iv_blur"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:scaleType="centerCrop"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>
        <ImageView
            android:id="@+id/iv_detail"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:scaleType="centerCrop"
            android:background="@color/gray_light_60"
            app:layout_constraintDimensionRatio="3:2"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"/>
        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fab_fav"
            style="@style/FABDefault"
            android:src="@drawable/ic_favourite_gray_24dp"
            android:backgroundTint="@color/white"
            android:layout_margin="@dimen/dimens_10dp"
            app:layout_constraintTop_toBottomOf="@id/iv_detail"
            app:layout_constraintBottom_toBottomOf="@id/iv_detail"
            app:layout_constraintLeft_toLeftOf="@id/iv_detail"
            app:layout_constraintRight_toRightOf="@id/iv_detail"
            app:layout_constraintVertical_bias="1"
            app:layout_constraintHorizontal_bias="0.98"/>
        <RelativeLayout
            android:id="@+id/lay_root_content"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintTop_toBottomOf="@id/iv_detail"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:background="@color/white_60">
                <LinearLayout
                    android:id="@+id/layout_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_marginHorizontal="@dimen/dimens_16dp"
                    android:layout_marginTop="@dimen/dimens_32dp"
                    android:layout_marginBottom="@dimen/dimens_16dp">
                    <TextView
                        android:id="@+id/tv_title"
                        style="@style/TextTitleSuperExtraBig"
                        android:text="@string/text_lorem_ipsum"
                        android:textStyle="bold"
                        android:textColor="@color/black"/>
                    <RatingBar
                        android:id="@+id/rating"
                        style="@style/RatingBarSmall"
                        android:layout_marginTop="@dimen/dimens_10dp"
                        app:layout_constraintTop_toBottomOf="@id/tv_title"
                        app:layout_constraintLeft_toLeftOf="@id/tv_title"/>
                </LinearLayout>
                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/layout_detail"
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:layout_margin="@dimen/dimens_16dp"
                    android:background="@color/white_0">
                    <View
                        android:id="@+id/line_horizontal_2"
                        style="@style/LineHorizontal"
                        android:background="@color/black"
                        android:visibility="invisible"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintLeft_toLeftOf="parent"
                        app:layout_constraintRight_toRightOf="parent"/>
                    <TextView
                        android:id="@+id/tv_release_date_constraint"
                        style="@style/TextTitleNormal"
                        android:text="@string/text_release_date"
                        android:textColor="@color/black"
                        android:layout_marginTop="@dimen/dimens_10dp"
                        app:layout_constraintTop_toBottomOf="@id/line_horizontal_2"
                        app:layout_constraintBottom_toTopOf="@+id/tv_release_date"
                        app:layout_constraintRight_toLeftOf="@+id/line_vertical_1"
                        app:layout_constraintLeft_toLeftOf="parent"
                        app:layout_constraintHorizontal_weight="1"
                        app:layout_constraintHorizontal_chainStyle="spread_inside"
                        app:layout_constraintVertical_chainStyle="packed"/>
                    <TextView
                        android:id="@+id/tv_release_date"
                        style="@style/TextTitleBig"
                        android:textStyle="bold"
                        android:layout_marginTop="@dimen/dimens_4dp"
                        android:textColor="@color/black"
                        app:layout_constraintTop_toBottomOf="@+id/tv_release_date_constraint"
                        app:layout_constraintBottom_toTopOf="@+id/line_horizontal_1"
                        app:layout_constraintLeft_toLeftOf="@+id/tv_release_date_constraint"
                        app:layout_constraintRight_toRightOf="@+id/tv_release_date_constraint"/>
                    <View
                        android:id="@+id/line_vertical_1"
                        style="@style/LineVertical"
                        android:background="@color/black"
                        android:visibility="invisible"
                        app:layout_constraintLeft_toRightOf="@+id/tv_release_date_constraint"
                        app:layout_constraintRight_toLeftOf="@+id/tv_language_constraint"
                        app:layout_constraintTop_toTopOf="@+id/tv_release_date_constraint"
                        app:layout_constraintBottom_toBottomOf="@+id/tv_release_date"/>
                    <TextView
                        android:id="@+id/tv_language_constraint"
                        style="@style/TextTitleNormal"
                        android:text="@string/text_language"
                        android:textColor="@color/black"
                        android:layout_marginTop="@dimen/dimens_10dp"
                        app:layout_constraintTop_toBottomOf="@id/line_horizontal_2"
                        app:layout_constraintLeft_toRightOf="@+id/line_vertical_1"
                        app:layout_constraintRight_toLeftOf="@+id/line_vertical_2"
                        app:layout_constraintBottom_toTopOf="@id/tv_language"
                        app:layout_constraintHorizontal_weight="1"/>
                    <TextView
                        android:id="@+id/tv_language"
                        style="@style/TextTitleBig"
                        android:textStyle="bold"
                        android:layout_marginTop="@dimen/dimens_4dp"
                        android:textColor="@color/black"
                        app:layout_constraintLeft_toLeftOf="@+id/tv_language_constraint"
                        app:layout_constraintRight_toRightOf="@+id/tv_language_constraint"
                        app:layout_constraintTop_toBottomOf="@+id/tv_language_constraint"/>
                    <View
                        android:id="@+id/line_vertical_2"
                        style="@style/LineVertical"
                        android:background="@color/black"
                        android:visibility="invisible"
                        app:layout_constraintLeft_toRightOf="@+id/tv_language_constraint"
                        app:layout_constraintRight_toLeftOf="@id/tv_popularity_constraint"
                        app:layout_constraintTop_toTopOf="@+id/tv_language_constraint"
                        app:layout_constraintBottom_toBottomOf="@+id/tv_language"/>
                    <TextView
                        android:id="@+id/tv_popularity_constraint"
                        style="@style/TextTitleNormal"
                        android:text="@string/text_popularity"
                        android:textColor="@color/black"
                        android:layout_marginTop="@dimen/dimens_10dp"
                        app:layout_constraintTop_toBottomOf="@id/line_horizontal_2"
                        app:layout_constraintLeft_toRightOf="@+id/line_vertical_2"
                        app:layout_constraintRight_toRightOf="parent"
                        app:layout_constraintBottom_toTopOf="@id/tv_popularity"
                        app:layout_constraintHorizontal_weight="1"/>
                    <TextView
                        android:id="@+id/tv_popularity"
                        style="@style/TextTitleBig"
                        android:textStyle="bold"
                        android:layout_marginTop="@dimen/dimens_4dp"
                        android:textColor="@color/black"
                        app:layout_constraintTop_toBottomOf="@id/tv_popularity_constraint"
                        app:layout_constraintLeft_toLeftOf="@id/tv_popularity_constraint"
                        app:layout_constraintRight_toRightOf="@id/tv_popularity_constraint"/>
                    <View
                        android:id="@+id/line_horizontal_1"
                        style="@style/LineHorizontal"
                        android:background="@color/black"
                        android:layout_marginTop="@dimen/dimens_10dp"
                        android:visibility="invisible"
                        app:layout_constraintTop_toBottomOf="@+id/tv_release_date"
                        app:layout_constraintLeft_toLeftOf="parent"
                        app:layout_constraintRight_toRightOf="parent"/>
                </androidx.constraintlayout.widget.ConstraintLayout>
                <LinearLayout
                    android:id="@+id/lay_overview"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:layout_margin="@dimen/dimens_16dp"
                    android:background="@color/white_0">
                    <TextView
                        android:id="@+id/tv_overview_constraint"
                        style="@style/TextTitleBig"
                        android:textStyle="bold"
                        android:text="@string/text_overview"
                        android:textColor="@color/black"
                        app:layout_constraintTop_toBottomOf="@id/line_horizontal_1"
                        app:layout_constraintBottom_toTopOf="@id/tv_overview"
                        app:layout_constraintLeft_toLeftOf="parent"/>
                    <TextView
                        android:id="@+id/tv_overview"
                        style="@style/TextTitleNormal"
                        android:layout_marginTop="@dimen/dimens_16dp"
                        android:maxLines="10"
                        android:textColor="@color/black"
                        app:layout_constraintTop_toBottomOf="@id/tv_overview_constraint"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintLeft_toLeftOf="parent"
                        app:layout_constraintRight_toRightOf="parent"/>
                </LinearLayout>
            </LinearLayout>
        </RelativeLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</RelativeLayout>